origami-engine/tests/trybuild/fail/should_fail_when_html_esape_is_disabled_and_noescape_is_used_in_literal.rs
use origami_engine::comp;

fn main() {
    comp! {
        foo =>
        div {
            "<div></div>";!
        }
    }
    foo!();
}
